[bdist_wheel]
universal=1

[metadata]
name = pypolar
version = 0.6.0
author = Scott Prahl
author_email = scott.prahl@oit.edu
license = MIT
description = Routines for analysis of polarization
keywords =
    retarder
    quarter wave
    half wave
    Jones calculus
    birefringent
    ellipsometry
    Fresnel
    Mueller calculus
    Stokes vector
url = https://github.com/scottprahl/pypolar.git

classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Physics

[options]
packages = pypolar
install_requires = numpy; matplotlib; sympy