[bdist_wheel]
universal=1

[metadata]
name = pypolar
version = 0.7.0
author = Scott Prahl
author_email = scott.prahl@oit.edu
license = MIT
description = Routines for analysis of polarization
keywords =
    retarder
    quarter wave
    half wave
    Jones calculus
    birefringent
    ellipsometry
    Fresnel
    Mueller calculus
    Stokes vector
url = https://github.com/scottprahl/pypolar.git

classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = pypolar
install_requires = numpy; matplotlib; sympy
python_requires = >=3.0
zip_safe = True
setup_requires = setuptools>=44
