[metadata]
description = Routines for analysis of polarization

keywords =
    retarder
    quarter wave
    half wave
    Jones calculus
    birefringent
    ellipsometry
    Fresnel
    Mueller calculus
    Stokes vector

classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = pypolar
install_requires = numpy; matplotlib; sympy; scipy
python_requires = >=3.4
setup_requires = setuptools>=44

[flake8]
ignore = W503, D212, N802, N803, N806, E501
per-file-ignores = 
    __init__.py:F401,F403
    setup.py:D100
exclude =
    .git,
    __pycache__,
    docs
max-line-length = 99
docstring-convention = google
